[tool.poetry]
name = "texec"
version = "0.1.0"
description = "Texec: The EXECutor of jobs. A local runner, like Github Action."
authors = ["YeonGyu-Kim <code.yeon.gyu@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
yapf = "^0.32.0"
pylint = "^2.15.5"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pylint.MASTER]
load-plugins = ''
persistent = 'yes'
suggestion-mode = 'yes'
unsafe-load-any-extension = 'no'

[tool.pylint.format]
max-line-length = 90

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = '''missing-docstring'''

[tool.pylint.IMPORTS]
allow-any-import-level = ''
allow-wildcard-with-all = 'no'
